--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/xchendo/React-RandomQuoteMachine#readme",
   "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "mongoose": "^4.12.1",
     "nodemon": "^1.12.1",
