--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "mongoose": "^4.12.1",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^1.12.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
