--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "mongoose": "^4.12.1",
