--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "dotenv": "^4.0.0",
+    "es6-promisify": "^5.0.0",
     "express": "^4.16.1",
     "mongoose": "^4.12.1",
     "mongoose-auto-increment": "^5.0.1",
