--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^4.12.1",
     "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^1.12.1",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
   },
@@ -44,6 +45,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.4",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "foundation-sites": "^6.4.3",
     "jquery": "^3.2.1",
     "node-sass": "^3.13.0",
